--- a/dev/static/styles/modules/header/header.sass
+++ b/dev/static/styles/modules/header/header.sass
@@ -64,10 +64,10 @@
                 svg
                     fill: darken($white, 30%)
         &__btn
-            color: $white
-            border: 1px solid $white
+            color: $accent
+            background-color: $gold
+            border: none
             &:hover, &:focus
-                background-color: $white
                 color: $accent
         &__city
             a
