--- a/dev/static/styles/modules/main-nav/main-nav.sass
+++ b/dev/static/styles/modules/main-nav/main-nav.sass
@@ -1,37 +1,38 @@
 =megaItem($h: 30)
-    opacity: 0
-    transform: translate3d(0, $h * -1px, 0)
-    transition: all .5s cubic-bezier(.785, .135, .15, .86)
+	opacity: 0
+	transform: translate3d(0, $h * -1px, 0)
+	transition: all .5s cubic-bezier(.785, .135, .15, .86)
 
 =megaItemView()
-    opacity: 1
-    transform: none
+	opacity: 1
+	transform: none
 
 =delayLoop($start: 0.3)
-    @for $i from 1 through 10
-        &:nth-child(#{$i})
-            transition-delay: ($start + $i * 0.05) * 1s
+	@for $i from 1 through 10
+		&:nth-child(#{$i})
+			transition-delay: ($start + $i * 0.05) * 1s
+
 
 .header
-    &__menu
-        width: 100%
-        +md-block()
-            display: none
+	&__menu
+		width: 100%
+		+md-block()
+			display: none
 
-    &__menu-list
-        display: flex
-        justify-content: center
+	&__menu-list
+		display: flex
+		justify-content: center
 
-    &__menu-item
-        &:not(:last-child)
-            margin-right: 14px
+	&__menu-item
+		&:not(:last-child)
+			margin-right: 14px
 
-    &__menu-link
-        color: $black
-        cursor: pointer
+	&__menu-link
+		color: $black
+		cursor: pointer
 
-        &:hover, &:focus, &--current
-            color: $accent
+		&:hover, &:focus, &--current
+			color: $accent
 
 .megamenu
     position: fixed
@@ -89,7 +90,6 @@
             flex-direction: column
             width: 100%
 
-
     &__second-item
         +megaItem()
         +delayLoop(1)
@@ -101,23 +101,21 @@
 
         &:not(:last-child)
             margin-right: 20px
+
     &__actions
         display: none
-        padding-top: 50px
-        padding-bottom: 46px
+        padding-bottom: 20px
         +sm-block()
             display: flex
             flex-direction: column
-            &-second
+
+        &-second
+            display: none
+            +sm-block
                 display: flex
-                justify-content: space-between
-                align-items: center
-                padding-top: 15px
-                margin-top: 15px
-                border-top: 1px solid rgba($white, .2)
-                +xs-block()
-                    flex-direction: column
-                    align-items: stretch
+                flex-direction: column
+                align-items: stretch
+                margin-bottom: 20px
 
     &__phone
         a
@@ -127,9 +125,11 @@
         height: 44px
         color: $white
         border: 1px solid $white
+
         &:hover, &:focus
             background-color: $white
             color: $accent
+
         +xs-block()
             margin-top: 15px
 
@@ -138,6 +138,7 @@
         margin-right: 40px
         position: relative
         color: $white
+
         & > *
             z-index: 5
 
@@ -152,6 +153,7 @@
                 transform: none
                 opacity: 1
                 pointer-events: auto
+
             .icon-triangle-down
                 transform: rotate(180deg)
 
@@ -166,10 +168,12 @@
         opacity: 0
         transform: translateY(10px)
         transition: all .3s ease
+
     &__subcities
         padding: 30px 25px !important
         background-color: rgba($grey, .9)
         backdrop-filter: blur(6px)
+
     &__subcity
         &:not(:last-child)
             margin-bottom: 10px
@@ -203,94 +207,98 @@
         height: 26px
         fill: $white
 
+.megamenu__wrap
+	+sm-block
+		padding-bottom: 40px
+
 .services-list
-    display: flex
-    flex-wrap: wrap
+	display: flex
+	flex-wrap: wrap
 
-    &__item
-        +megaItem()
-        +delayLoop()
-        +col()
-        +size(2)
-        +size-md(4)
-        +size-sm(12)
-        font-size: 18px
-        line-height: 24px
-        font-weight: bold
-        display: flex
-        flex-direction: column
-        +md-block()
-            margin-bottom: 30px
-        +sm-block()
-            border-bottom: 1px solid rgba($white, .3)
-            margin-bottom: 0
-            &:first-child
-                border-top: 1px solid rgba($white, .3)
+	&__item
+		+megaItem()
+		+delayLoop()
+		+col()
+		+size(2)
+		+size-md(4)
+		+size-sm(12)
+		font-size: 18px
+		line-height: 24px
+		font-weight: bold
+		display: flex
+		flex-direction: column
+		+md-block()
+			margin-bottom: 30px
+		+sm-block()
+			border-bottom: 1px solid rgba($white, .3)
+			margin-bottom: 0
+			&:first-child
+				border-top: 1px solid rgba($white, .3)
 
-    &__link
-        color: $white
-        display: inline-block
-        height: 48px
-        +md-block()
-            height: auto
-        +sm-block()
-            display: flex
-            min-height: 70px
-            align-items: center
-            justify-content: space-between
+	&__link
+		color: $white
+		display: inline-block
+		height: 48px
+		+md-block()
+			height: auto
+		+sm-block()
+			display: flex
+			min-height: 70px
+			align-items: center
+			justify-content: space-between
 
-        &--empty
-            opacity: .75
+		&--empty
+			opacity: .75
 
-        &:hover, &:focus, &--empty
-            color: darken($white, 30%)
+		&:hover, &:focus, &--empty
+			color: darken($white, 30%)
 
-    &__mob-plus
-        position: relative
-        display: none
-        +sm-block()
-            display: inline-flex
-            width: 31px
-            height: 31px
-            cursor: pointer
-            &::before, &::after
-                content: ''
-                display: block
-                position: absolute
-                width: 100%
-                height: 1px
-                left: 0
-                top: 50%
-                background-color: rgba($white, .3)
-            &::after
-                height: 100%
-                width: 1px
-                top: 0
-                left: 50%
-            &--active
-                &::after
-                    display: none
+	&__mob-plus
+		position: relative
+		display: none
+		+sm-block()
+			display: inline-flex
+			width: 31px
+			height: 31px
+			cursor: pointer
+			&::before, &::after
+				content: ''
+				display: block
+				position: absolute
+				width: 100%
+				height: 1px
+				left: 0
+				top: 50%
+				background-color: rgba($white, .3)
+			&::after
+				height: 100%
+				width: 1px
+				top: 0
+				left: 50%
+			&--active
+				&::after
+					display: none
 
-    &__sublist
-        margin-top: 20px
-        +sm-block()
-            display: none
-            margin-top: 0
-            margin-bottom: 30px
+	&__sublist
+		margin-top: 20px
+		+sm-block()
+			display: none
+			margin-top: 0
+			margin-bottom: 30px
 
-    &__subitem
-        font-size: 14px
-        line-height: 20px
-        font-weight: 300
+	&__subitem
+		font-size: 14px
+		line-height: 20px
+		font-weight: 300
 
-        &:not(:last-child)
-            margin-bottom: 14px
+		&:not(:last-child)
+			margin-bottom: 14px
 
-    &__subitem-link
-        color: $white
+	&__subitem-link
+		color: $white
 
-        &:hover, &:focus
-            color: darken($white, 30%)
+		&:hover, &:focus
+			color: darken($white, 30%)
 
 .sandwich
     display: none
