--- a/dev/static/styles/modules/modules.sass
+++ b/dev/static/styles/modules/modules.sass
@@ -20,13 +20,16 @@
 		line-height: 27px
 		display: inline-flex
 		align-items: center
-		height: 35px
-		padding-right: 20px
-		padding-left: 20px
+		min-height: 35px
+		padding: 5px 20px
 		background-color: $gold
 		color: $accent
 		border-radius: 17px
 		margin-bottom: 32px
+
+		+xs-block
+			font-size: 16px
+			line-height: 1.3
 
 	&__text
 		font-size: 110px
@@ -53,6 +56,9 @@
 			font-size: 60px
 			line-height: 78px
 			margin-bottom: 90px
+			+sm-block
+				font-size: 32px
+				line-height: 38px
 
 			span
 				opacity: 100%
@@ -82,6 +88,8 @@
 				top: -18px
 				left: 78px
 				color: $white
+				+xs-block
+					left: 48px
 
 			&::after
 				content: ''
@@ -94,15 +102,21 @@
 				width: 44px
 				height: 1px
 				transform: rotateZ(35deg)
+				+xs-block
+					left: 60px
 
 		+sm-block()
 			font-size: 40px
 			line-height: 50px
+		+xs-block
+			font-size: 32px
 
 	&__action-icon
 		width: 75px
 		height: 75px
 		fill: $gold
+		+xs-block
+			+sizebox(50px)
 
 	&__small-item
 		margin-bottom: 0
