Add new block (panel-video) 101198

--- a/dev/pug/site-promotion.pug
+++ b/dev/pug/site-promotion.pug
@@ -12,6 +12,7 @@ block content
     include modules/topcases
     +feedbackSlider(feedbacks, 'Отзывы')
     +avideo(promAvideo)
+    include modules/panel-video
     +taber(tabsStrategy, 'Стратегия поискового продвижения', 'light')
     +feedbackSlider(ourRules, 'Наш подход', 'feedback--rules')
     include modules/consult-form
