--- a/dev/static/styles/modules/modules.sass
+++ b/dev/static/styles/modules/modules.sass
@@ -12,6 +12,7 @@
 @import "price-table"
 @import "quote"
 @import "range-calculator"
+@import "panel-video"
 
 // Page title h1
 .page-title
@@ -59,6 +60,7 @@
 			+sm-block
 				font-size: 32px
 				line-height: 38px
+				margin-bottom: 50px
 
 			span
 				opacity: 100%
