Fix (panel-video) 101198

--- a/dev/pug/modules/panel-video.pug
+++ b/dev/pug/modules/panel-video.pug
@@ -1,6 +1,6 @@
 section.section
     .b-panel-video
-        h3.h3._title Доступ во внутреннюю панель задач
+        h3.h2._title.topcase Доступ во внутреннюю панель задач
         ._content
             p._desc В нашей внутренней панели задач технические специалисты отвечают напрямую. Это сокращает время получения ответа и исключает «испорченный телефон»
             a(data-fancybox, href="https://youtu.be/SLbWgGezEAU&amp;autoplay=1&amp;rel=0&amp;controls=0&amp;showinfo=0")._btn
