--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -127,8 +127,8 @@ button
     flex: 1 0 auto
 
 .section
-    padding-top: 40px
-    padding-bottom: 40px
+    margin-top: 40px
+    margin-bottom: 40px
 
     &--with-bg
         background-repeat: no-repeat
@@ -140,8 +140,7 @@ button
     &--blue
         background-color: $accent
         color: $white
-        padding-right: 30px
-        padding-left: 30px
+        padding: 40px 30px
 
     &--wide
         padding-left: 0
