Add layouts for formats 101686

--- a/dev/pug/site-promotion.pug
+++ b/dev/pug/site-promotion.pug
@@ -10,6 +10,7 @@ block content
     //-include modules/focus
     +taber(tabsPromo1)
     include modules/topcases
+    include modules/formats
     +feedbackSlider(feedbacks, 'Отзывы')
     +avideo(promAvideo)
     include modules/panel-video
