Fix styles for formats 101686

--- a/dev/static/styles/modules/formats.sass
+++ b/dev/static/styles/modules/formats.sass
@@ -92,13 +92,14 @@
 		line-height: 1.23
 		color: $accent
 		& > span
+			display: block
 			color: $black
-			font-size: 24px
+			font-size: 13px
+			line-height: 1.38
 		+sm-block
-			font-size: 18px
-			line-height: 1.33
 			& > span
-				font-size: 16px
+				font-size: 12px
+				line-height: 1.33
 
 	&__simple-list
 		font-size: 18px
@@ -152,10 +153,11 @@
 
 	&__spec-item
 		break-inside: avoid
-		margin-bottom: 25px
+		padding-bottom: 25px
 		display: grid
 		gap: 10px
 		+sm-block
+			padding-bottom: 0
 			margin-bottom: 15px
 			gap: 5px
 
@@ -172,9 +174,7 @@
 	&__footer
 		padding-top: 30px
 		box-shadow: inset 0 1px rgba($accent, .15)
-		margin-top: 30px
 		+sm-block
-			margin-top: 15px
 			padding-top: 15px
 
 	&__btn-wrap
