--- a/dev/pug/utils/mixins.pug
+++ b/dev/pug/utils/mixins.pug
@@ -1,10 +1,11 @@
-mixin icon(name,mod)
-    if(mod)
-        svg(class="svg-sprite-icon icon-" + name + ' ' + mod)
-            use(xlink:href="images/svg/symbol/sprite.svg#" + name)
-    else
-        svg(class="svg-sprite-icon icon-" + name)
-            use(xlink:href="images/svg/symbol/sprite.svg#" + name)
+mixin icon(name,mod,w,h)
+    svg.svg-sprite-icon(
+        class="icon-" + name
+        class= mod || null
+        width= w || null
+        height= h || w
+    )&attributes(attributes)
+        use(xlink:href="images/svg/symbol/sprite.svg#" + name)
 
 mixin controlsSlider(parrent, mod)
     .b-controls(class= parrent+'__controls')
