--- a/dev/pug/modules/smm/smm-price-table.pug
+++ b/dev/pug/modules/smm/smm-price-table.pug
@@ -174,9 +174,21 @@ section.section
                                 +icon('collapse-arrow', null, 29, 15)._collapse-arrow.close
                         ._rows
                             each row in section.list
-                                ._col.-title= row.title
-                                +col('start', row, row.boolean)
-                                +col('optima', row, row.boolean)
-                                +col('vip', row, row.boolean)
-
-
+                                ._row
+                                    ._col.-title= row.title
+                                    +col('start', row, row.boolean)
+                                    +col('optima', row, row.boolean)
+                                    +col('vip', row, row.boolean)
+            ._footer
+                ._col.-foot
+                    ._foot-title Ежемесячная абонентская плата
+                    ._foot-desc (скидка 10% при оплате за 3 месяца)
+                ._col.-foot
+                    ._foot-price 28 000 ₽
+                    button._btn.btn.btn--flat.btn--blue Заказать
+                ._col.-foot
+                    ._foot-price 48 000 ₽
+                    button._btn.btn.btn--flat.btn--blue Заказать
+                ._col.-foot
+                    ._foot-price 65 000 ₽
+                    button._btn.btn.btn--flat.btn--blue Заказать
