Add collapse logic smm table 101436

--- a/dev/static/styles/modules/smm-table.sass
+++ b/dev/static/styles/modules/smm-table.sass
@@ -51,6 +51,7 @@
 	&__collapse-arrow
 		fill: $accent
 		transition: all .3s ease-in-out
+		pointer-events: none
 
 		&.close
 			transform: rotateZ(180deg)
